# AskPalestine

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/alembic/: README.md  env.py
backend/app/: auth.py  database.py  dependencies.py  google_policy_complier.py  main.py
backend/app/core/models/: answer.py  answer_like.py  association_tables.py  base.py  base_class.py  history.py  init_db.py  question.py  question_tags.py  report.py  share.py  subscription.py  tag.py  unverified_answer.py  user.py
backend/app/core/schemas/: answer.py  history.py  question.py  report.py  subscription.py  tag.py  user.py
backend/app/crud/: __init__.py  base.py  crud_answer.py  crud_history.py  crud_question.py  crud_user.py
backend/app/routers/: answers.py  historys.py  questions.py  stats.py  subscriptions.py  users.py
embedding-indexer/: Dockerfile  db.go  main.go  openai.go
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/assets/svgs/: index.ts
frontend/components/ActionButton/: ActionButton.interface.ts  (+3 more)
frontend/hooks/: useAuthStatus.ts
frontend/interfaces/: _app.interface.ts  qa.interface.ts
frontend/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
frontend/styles/: Auth.module.css  DetailedQnA.module.css  QnA.module.css  globals.css
frontend/utils/: dataActions.ts  dataRequests.ts
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/macos/: firebase_app_id_file.json
(+74 files in other folders)
